[gd_scene load_steps=6 format=2]

[ext_resource path="res://prefabs/items/checkbox_text_item/checkbox_text_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main/Tools.gd" type="Script" id=2]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=3]
[ext_resource path="res://prefabs/items/checkbox_item/checkbox_item.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/main/Tabs.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tabs" type="Panel" parent="CanvasLayer"]
anchor_right = 0.839
anchor_bottom = 0.00666667
margin_right = -0.136047
margin_bottom = 36.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Tabs"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddTabButton" type="Button" parent="CanvasLayer/Tabs/HBoxContainer"]
margin_right = 20.0
margin_bottom = 40.0
text = "+"

[node name="Tools" type="Panel" parent="CanvasLayer"]
anchor_right = 0.839
margin_top = 40.0
margin_right = -0.136047
margin_bottom = 80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Tools"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/Tools/HBoxContainer"]
margin_right = 42.0
margin_bottom = 40.0
rect_min_size = Vector2( 42, 0 )

[node name="SmallSize" type="Button" parent="CanvasLayer/Tools/HBoxContainer"]
margin_left = 46.0
margin_right = 93.0
margin_bottom = 40.0
text = "Small"

[node name="MediumSize" type="Button" parent="CanvasLayer/Tools/HBoxContainer"]
margin_left = 97.0
margin_right = 162.0
margin_bottom = 40.0
text = "Medium"

[node name="LargeSize" type="Button" parent="CanvasLayer/Tools/HBoxContainer"]
margin_left = 166.0
margin_right = 212.0
margin_bottom = 40.0
text = "Large"

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckboxTextItem" parent="CanvasLayer/Panel/VBoxContainer" instance=ExtResource( 1 )]

[node name="CheckboxItem" parent="CanvasLayer/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 165.0

[node name="Save" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 165.0
margin_bottom = 92.0
text = "Save"

[connection signal="pressed" from="CanvasLayer/Tabs/HBoxContainer/AddTabButton" to="CanvasLayer/Tabs" method="_on_AddTabButton_pressed"]
[connection signal="color_changed" from="CanvasLayer/Tools/HBoxContainer/ColorPickerButton" to="CanvasLayer/Tools" method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="CanvasLayer/Tools/HBoxContainer/SmallSize" to="CanvasLayer/Tools" method="_on_SmallSize_pressed"]
[connection signal="pressed" from="CanvasLayer/Tools/HBoxContainer/MediumSize" to="CanvasLayer/Tools" method="_on_MediumSize_pressed"]
[connection signal="pressed" from="CanvasLayer/Tools/HBoxContainer/LargeSize" to="CanvasLayer/Tools" method="_on_LargeSize_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Save" to="." method="_on_Save_pressed"]
